--- a/index.html
+++ b/index.html
@@ -355,6 +355,49 @@
                 + "Links sehen Sie die alte Post, rechts den Stadtpark. "
                 + "Fahren Sie bis zur Kavalierstraße vor und biegen Sie dann rechts zum Bauhaus Museum ein. "
        },
+       {
+        name: "Ecke Museum",
+        lat: 51.835159,
+        lon: 12.242284,
+        radius: 15, // Meter
+        message: "Wir sind jetzt wieder auf dem Rückweg. "
+                + "Biegen Sie jetzt rechts in die Kavalierstraße ein und folgen Sie dieser etwa 2,6 Kilometer geradeaus bis zur Helmut-Kohl-Straße. "
+                + "Unterwegs sehen Sie rechts das Bauhaus Museum und links das Rathaus-Center. Fahren Sie anschließend geradeaus weiter. "
+       },
+        {
+        name: "Museumskreuzung",
+        lat: 51.831139,
+        lon: 12.242484,
+        radius: 25, // Meter
+        message: "Sie befinden sich auf dem richtigen Weg. "
+                + "Überqueren Sie bitte die Museumskreuzung. "
+                + "Fahren Sie anschließend am Dessau-Center vorbei in Richtung Süd, der Franzstraße folgend. "
+       },
+       {
+        name: "Leipziger Tor",
+        lat: 51.824366,
+        lon: 12.242276,
+        radius: 25, // Meter
+        message: "Sie befinden sich weiterhin auf dem richtigen Weg. "
+                + "Rechts sehen Sie das Leipziger Tor. "
+                + "Wenig später folgen links die Pizzeria Castello und dahinter der alte Wasserturm. "
+                + "Fahren Sie weiter, nun der Heidestraße folgend, am Friedhof Drei vorbei. "
+                + "Biegen Sie anschließend links in die Helmut-Kohl-Straße ein. "
+       },
+        {
+        name: "Ecke Helmut-Kohl-Straße",
+        lat: 51.811695,
+        lon: 12.241518,
+        radius: 15, // Meter
+        message: "Biegen Sie nun links ab und überqueren Sie hinter der Tankstelle die Straße nach rechts. "
+        },
+        {
+        name: "Fußgängerüberweg",
+        lat: 51.812261,
+        lon: 12.245818,
+        radius: 15, // Meter
+        message: "Biegen Sie nun rechts ab und anschließend links auf die Südstraße. "
+        },
       {
         name: "Ende",
         lat: 54.293303,
